--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ async function handleRequest(request) {
             <div id="uploadStatus" style="margin-top: 20px;"></div>
             <hr>
             <p class="text-center">Thanks to <a href="https://telegra.ph">Telegraph</a> & <a href="https://cloudflare.com">Cloudflare</a></p>
+            <p class="text-center">GitHub: <a href="https://github.com/goldeye0351/cf-tg-image">CF TG IMAGES </a></p>
 
         </div>
 
