Update copy to workers.html

--- a/copy to workers.html
+++ b/copy to workers.html
@@ -194,7 +194,7 @@ const htmlContent = `
             })
             .then(response => response.json())
             .then(data => {
-                const src = 'https://pichub.317210.xyz' + data[0].src;
+                const src = 'https://pichub.51xmi.com' + data[0].src;
                 uploadStatus.innerHTML = \`
                     <img src="\${src}"  style="width: -webkit-fill-available; border-radius: 30px;" alt="Uploaded Image">
                     <input type="text" id="imageUrl" value="\${src}">
